--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,7 +4,7 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Bio
+  - name: Home
     url: /
     weight: 10
   - name: Papers
@@ -13,15 +13,12 @@ main:
   - name: Talks
     url: /#talks
     weight: 12
-  - name: News
-    url: /#news
-    weight: 13
   - name: Experience
     url: experience/
-    weight: 20
+    weight: 13
   - name: Projects
     url: projects/
-    weight: 30
+    weight: 14
   - name: Teaching
     url: teaching/
-    weight: 40
+    weight: 15
