--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: publications/
     weight: 11
   - name: Talks
-    url: /#talks
+    url: talks/
     weight: 12
   - name: Experience
     url: experience/
