--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -4,21 +4,21 @@
   #   The weight parameter defines the order that the links will appear in.
 
 main:
-  - name: Home
+  - name: Accueil 
     url: /
     weight: 10
-  - name: Papers
+  - name: Publications
     url: publications/
     weight: 11
-  - name: Talks
-    url: talks/
+  - name: Conférences
+    url: conferences/
     weight: 12
-  - name: Experience
-    url: experience/
+  - name: CV
+    url: cv/
     weight: 13
-  - name: Projects
-    url: projects/
+  - name: Projets
+    url: projets/
     weight: 14
-  - name: Teaching
-    url: teaching/
+  - name: Enseignement
+    url: enseignement/
     weight: 15
